--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 <!--/*thymesVar id="two" type="com.crud.tasks.controller.StaticWebPageController"*/-->
 <!--/*thymesVar id="mul" type="com.crud.tasks.controller.StaticWebPageController"*/-->
 <!--/*thymesVar id="equal" type="com.crud.tasks.controller.StaticWebPageController"*/-->
-<span th:label="${two} ${mul} ${two} ${equal}" th:text="${two} * ${two}"></span>
+<span th:text="${mul}" th:text="${two} * ${two}"></span>
 
 </body>
 </html>
